--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.13.2",
     "@grpc/proto-loader": "^0.7.13",
+    "grpc-ws-reverse-proxy": "file:",
     "ws": "^8.18.1"
   }
 }
